V 0.23 introdotte le classi DateTime e Location e completata la loro implementazione. Le classi servono rispettivamente per gestire una data ed un orario come unico oggetto ed un luogo. Le classi permettono di creare oggetti; la stampa a stringa con formato fisso; ottenere e settare i suoi valori e la possibilità di confronto con altri oggetti della stessa classe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,9 @@ add_executable(carricato_todolist main.cpp
         inc/TimeOfDay.h
         src/Date.cpp
         src/TimeOfDay.cpp
+        inc/DateTime.h
+        src/DateTime.cpp
+        inc/Location.h
+        src/Location.cpp
 
 )
